--- a/src/index.pug
+++ b/src/index.pug
@@ -3,5 +3,8 @@ html
   head
     title ThreeJS Test
     style(src="./design.css")
-  body
+    meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1")
+  body.show-debug-info
     #app
+      #debug-messages
+        .message#mouselook-data
